--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,6 @@ jobs:
         name: Build
         id: docker_build
         uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./Dockerfile
       -
-         run: echo ${{ steps.docker_build.outputs.digest }}
+        name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
