--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
         name: Build
         id: docker_build
         uses: docker/build-push-action@v2
+        tags: ci/OpenADR-VEN-Library:latest
       -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+        name: Run unit tests
+        run: docker run -t ci/OpenADR-VEN-Library:latest /bin/bash -c "cd /open-adr-ven-library/build/debug && ./testoadr"
