--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,8 @@ jobs:
         name: Build
         id: docker_build
         uses: docker/build-push-action@v2
-        tags: ci/OpenADR-VEN-Library:latest
+        with:
+          tags: ci/OpenADR-VEN-Library:latest
       -
         name: Run unit tests
         run: docker run -t ci/OpenADR-VEN-Library:latest /bin/bash -c "cd /open-adr-ven-library/build/debug && ./testoadr"
