--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          tags: ci/openadr-ven-library:latest
+          tags: localhost:5000/ci/openadr-ven-library:latest
       -
         name: Run unit tests
-        run: docker run ${{ steps.docker_build.outputs.digest }} /bin/bash -c "cd /open-adr-ven-library/build/debug && ./testoadr"
+        run: docker run localhost:5000/ci/openadr-ven-library:latest /bin/bash -c "cd /open-adr-ven-library/build/debug && ./testoadr"
