Push image to local registry in github workflows

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          push: true
           tags: localhost:5000/ci/openadr-ven-library:latest
       -
         name: Run unit tests
