--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,6 @@ on:
 jobs:
   main:
     runs-on: ubuntu-latest
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
     steps:
       -
         name: Set up Docker Buildx
@@ -27,8 +22,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: true
-          tags: localhost:5000/ci/openadr-ven-library:latest
+          load: true
+          tags: ci/openadr-ven-library:latest
       -
         name: Run unit tests
-        run: docker run localhost:5000/ci/openadr-ven-library:latest /bin/sh -c "cd /open-adr-ven-library/build/debug && ./testoadr"
+        run: docker run ci/openadr-ven-library:latest /bin/sh -c "cd /open-adr-ven-library/build/debug && ./testoadr"
