--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           echo 'EOF' >> $GITHUB_ENV
       -
         name: Check unit test result
-        if: contains(${{ $TEST_RESULT }}, '[  FAILED  ]')
+        if: contains($TEST_RESULT, '[  FAILED  ]')
         run:
           echo "Failed!"
           set -e o pipefail
