--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,9 @@ name: CI
 on:
   pull_request:
   push:
-    branches: [master, test/kgrabowski]
+    branches:
+      - master
+      - test/kgrabowski
   workflow_dispatch:
 
 jobs:
