Sign and verify messages exchanged between VEN/VTN

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,7 +74,7 @@ if (SAMPLE)
   add_definitions(-DELPP_THREAD_SAFE -DELPP_NO_DEFAULT_LOG_FILE)
   file(GLOB_RECURSE samplevenmanager_SRC ./samplevenmanager/samplevenmanager/*.cpp)
   add_executable(samplevenmgr ${samplevenmanager_SRC})
-  target_link_libraries (samplevenmgr LINK_PUBLIC oadr oadrsd curl xerces-c pthread)
+  target_link_libraries (samplevenmgr LINK_PUBLIC oadr oadrsd curl xerces-c xml-security-c pthread)
   target_compile_options(samplevenmgr PRIVATE ${COVERAGE_COMPILE_OPTIONS})
   target_link_options(samplevenmgr PRIVATE ${COVERAGE_LINK_OPTIONS})
 endif()
@@ -88,12 +88,12 @@ if (TEST)
 
   # file(COPY )
   file(REMOVE_RECURSE ./xml)
-  file(COPY ./oadrtest/oadrtest DESTINATION ./xml FILES_MATCHING PATTERN "*.xml" PATTERN "*.txt")
+  file(COPY ./oadrtest/oadrtest DESTINATION ./xml FILES_MATCHING PATTERN "*.xml" PATTERN "*.txt" PATTERN "*.der" PATTERN "*.pem")
 
   # ---- tests ----
   file(GLOB_RECURSE oadrtest_SRC ./oadrtest/oadrtest/*.cpp)
   add_executable(testoadr ${oadrtest_SRC})
-  target_link_libraries (testoadr LINK_PUBLIC oadr oadrsd curl xerces-c gtest pthread)
+  target_link_libraries (testoadr LINK_PUBLIC oadr oadrsd curl xerces-c xml-security-c gtest pthread)
   target_compile_options(testoadr PRIVATE ${COVERAGE_COMPILE_OPTIONS})
   target_link_options(testoadr PRIVATE ${COVERAGE_LINK_OPTIONS})
 endif()
