Don't request events if unregistered after 1 poll

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,7 +93,8 @@ if (TEST)
   # ---- tests ----
   file(GLOB_RECURSE oadrtest_SRC ./oadrtest/oadrtest/*.cpp)
   add_executable(testoadr ${oadrtest_SRC})
-  target_link_libraries (testoadr LINK_PUBLIC oadr oadrsd curl xerces-c xml-security-c gtest pthread)
+  target_include_directories(testoadr PRIVATE oadrtest)
+  target_link_libraries (testoadr LINK_PUBLIC oadr oadrsd curl xerces-c xml-security-c gtest gmock pthread)
   target_compile_options(testoadr PRIVATE ${COVERAGE_COMPILE_OPTIONS})
   target_link_options(testoadr PRIVATE ${COVERAGE_LINK_OPTIONS})
 endif()
